<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="#000000"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Main">

    <TextView
        android:id="@+id/lbl_Binario"
        android:layout_width="match_parent"
        android:layout_height="47dp"
        android:fontFamily="sans-serif"
        android:text="@string/SistemaBinario"
        android:textAppearance="@style/TextAppearance.AppCompat"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="25dp"
        android:typeface="monospace" />

    <LinearLayout
        android:id="@+id/lyh_Binario"
        android:layout_width="match_parent"
        android:layout_height="47dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn_Binario"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@android:color/holo_orange_light"
            android:onClick="Binarios"
            android:text="@string/SistemaBinario_otros"
            android:textAllCaps="false" />

    </LinearLayout>

    <TextView
        android:id="@+id/lbl_Decimal"
        android:layout_width="match_parent"
        android:layout_height="44dp"
        android:fontFamily="sans-serif"
        android:text="@string/SistemaDecimal"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="25dp"
        android:typeface="monospace" />

    <LinearLayout
        android:id="@+id/lyh_Decimal"
        android:layout_width="match_parent"
        android:layout_height="51dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn_Decimal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/colorAccent"
            android:onClick="Decimales"
            android:text="@string/SistemaDecimal_otros"
            android:textAllCaps="false" />

    </LinearLayout>

    <TextView
        android:id="@+id/lbl_Octal"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:fontFamily="sans-serif"
        android:text="@string/SistemaOctal"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="25dp"
        android:typeface="monospace" />

    <LinearLayout
        android:id="@+id/lyh_Octal"
        android:layout_width="match_parent"
        android:layout_height="51dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn_Octal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@android:color/holo_blue_dark"
            android:onClick="Octales"
            android:text="@string/SistemaOctal_otros"
            android:textAllCaps="false" />

    </LinearLayout>

    <TextView
        android:id="@+id/lbl_Hexadecimal"
        android:layout_width="match_parent"
        android:layout_height="44dp"
        android:fontFamily="sans-serif"
        android:text="@string/SistemaHexadecimal"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="25dp"
        android:typeface="monospace" />

    <LinearLayout
        android:id="@+id/lyh_Hexadecimal"
        android:layout_width="match_parent"
        android:layout_height="51dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn_Hexadecimal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@android:color/holo_purple"
            android:onClick="Hexadecimales"
            android:text="@string/SistemaHexadecimal_otros"
            android:textAllCaps="false" />

    </LinearLayout>
</LinearLayout>